# csad_2025_KI407_TsiaputaMykhailoPetrovych_24

./: .gitignore  CMakeLists.txt  README.md  ci.bat  ci.sh  main.cpp  math_operations.h
.github/workflows/: ci.yml
spi_master/: spi_master.v  spi_rx.v  spi_tx.v  tb_spi_master.v  tb_spi_master.vcd  vish_stacktrace.vstf
spi_master/work/: _info  _lib.qdb  _lib1_1.qdb  _lib1_1.qpg  _lib1_1.qtl
test/: main_test.cpp
tests/: main_test.cpp  unit_tests.cpp
work/: _info
